src/objects/vail_test__c.object
<CustomObject>
    <fields>
        <fullName>AccNumber__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>물음표 ㅋㅋ</inlineHelpText>
        <label>AccNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>vail test</relationshipLabel>
        <relationshipName>vail_test</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>test_test__c + TEXT(today())</formula>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>HYPERLINK(&apos;https://chikpale-dev-ed.lightning.force.com/lightning/r/Account/&apos;&amp;Account__r.Id&amp;&apos;/view&apos;,  Account__r.Name  ,&apos;self&apos;)</formula>
        <label>link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test_test__c</fullName>
                    <label>test test</label>
                </value>
                <value>
                    <fullName>Email__c</fullName>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Url__c</fullName>
                    <label>Url</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_test__c</fullName>
        <label>test test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>vail test</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccNumber__c</columns>
        <columns>Account__c</columns>
        <columns>Email__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>AccNumber__c</columns>
        <columns>Account__c</columns>
        <columns>test_test__c</columns>
        <columns>Key__c</columns>
        <columns>Email__c</columns>
        <columns>link__c</columns>
        <columns>Url__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>test</label>
    </listViews>
    <nameField>
        <displayFormat>vt-{0000000}</displayFormat>
        <label>vail test Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>test</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( test_test__c )</errorConditionFormula>
        <errorDisplayField>test_test__c</errorDisplayField>
        <errorMessage>값이 비어있습니다.</errorMessage>
    </validationRules>
</CustomObject>